# FeedReader

./: .editorconfig  .gitignore  CMakeLists.txt  meson.build
WebExtension/: meson.build
data/: meson.build  org.gnome.FeedReader.Daemon.service.in  org.gnome.FeedReader.appdata.xml.in  org.gnome.FeedReader.gresource.xml
libIvy/: meson.build
libVilistextum/: meson.build
libgd/: meson.build
libgtkimageview/: meson.build
plugins/backend/bazqux/: CMakeLists.txt
plugins/backend/demo/: CMakeLists.txt
plugins/backend/feedbin/: CMakeLists.txt
plugins/backend/feedhq/: CMakeLists.txt
plugins/backend/feedly/: CMakeLists.txt
plugins/backend/fresh/: CMakeLists.txt
plugins/backend/inoreader/: CMakeLists.txt
plugins/backend/local/: CMakeLists.txt
plugins/backend/oldreader/: CMakeLists.txt
plugins/backend/owncloud/: CMakeLists.txt
plugins/backend/ttrss/: CMakeLists.txt
plugins/share/Browser/: CMakeLists.txt  meson.build
plugins/share/Email/: CMakeLists.txt
plugins/share/Instapaper/: CMakeLists.txt
plugins/share/Pocket/: CMakeLists.txt
plugins/share/Telegram/: CMakeLists.txt
plugins/share/Twitter/: CMakeLists.txt
plugins/share/Wallabag/: CMakeLists.txt
po/: LINGUAS
schemas/: meson.build
src/: Utils.vala  dbBase.vala  meson.build
src/Backend/: FeedServer.vala  OPMLparser.vala
src/ContentGrabber/: grabber.vala  grabberUtils.vala
vapi/: gtkimageview.vapi
