SOURCES = [
  'ActionCache.vala',
  'CachedActionManager.vala',
  'Daemon.vala',
  'dbBase.vala',
  'dbDaemon.vala',
  'dbUI.vala',
  'DBusConnection.vala',
  'Enums.vala',
  'FavIconCache.vala',
  'FeedReader.vala',
  'FuncUtils.vala',
  'Logger.vala',
  'LoginInterface.vala',
  'Notification.vala',
  'QueryBuilder.vala',
  'Settings.vala',
  'Structs.vala',
  'Utils.vala',
  'UtilsDaemon.vala',
  'Backend/FeedServer.vala',
  'Backend/FeedServerInterface.vala',
  'Backend/OPMLparser.vala',
  'ContentGrabber/grabber.vala',
  'ContentGrabber/grabberConfig.vala',
  'ContentGrabber/grabberUtils.vala',
  'ContentGrabber/grabberUtils.vala',
  'ContentGrabber/stringPair.vala',
  'Model/Article.vala',
  'Model/CachedAction.vala',
  'Model/Category.vala',
  'Model/Feed.vala',
  'Model/InterfaceState.vala',
  'Model/ShareAccount.vala',
  'Model/Tag.vala',
  'Share/ServiceSetup.vala',
  'Share/share.vala',
  'Share/ShareAccountInterface.vala',
  'Widgets/ArticleList/ArticleList.vala',
  'Widgets/ArticleList/ArticleListBox.vala',
  'Widgets/ArticleList/ArticleListEmptyLabel.vala',
  'Widgets/ArticleList/ArticleListEmptyLabel.vala',
  'Widgets/ArticleList/ArticleListScroll.vala',
  'Widgets/AddPopover.vala',
  'Widgets/ArticleRow.vala',
  'Widgets/ArticleView.vala'
  'Widgets/ArticleViewHeader.vala'
  'Widgets/ArticleViewLoadProgress.vala',
  'Widgets/BackendInfoPopover.vala',
  'Widgets/CategorieRow.vala',
  'Widgets/ColorCircle.vala',
  'Widgets/ColorPopover.vala',
  'Widgets/ColumnView.vala',
  'Widgets/ColumnViewHeader.vala',
  'Widgets/FeedList.vala',
  'Widgets/FeedListFooter.vala',
  'Widgets/FeedRow.vala',
  'Widgets/FullscreenButton.vala',
  'Widgets/FullscreenHeader.vala',
  'Widgets/HoverButton.vala',
  'Widgets/ImagePopup.vala',
  'Widgets/InAppNotification.vala',
  'Widgets/InfoBar.vala',
  'Widgets/LoginPage.vala',
  'Widgets/LoginRow.vala',
  'Widgets/MainWindow.vala',
  'Widgets/MediaButton.vala',
  'Widgets/MediaPlayer.vala',
  'Widgets/MediaRow.vala',
  'Widgets/ModeButton.vala',
  'Widgets/RemovePopover.vala',
  'Widgets/ResetPage.vala',
  'Widgets/ServiceInfo.vala',
  'Widgets/ServiceSettingsPopover.vala',
  'Widgets/Setting.vala',
  'Widgets/SettingsDialog.vala',
  'Widgets/SharePopover.vala',
  'Widgets/ShareRow.vala',
  'Widgets/ShortcutsWindow.vala',
  'Widgets/SimpleHeader.vala',
  'Widgets/SpringCleanPage.vala',
  'Widgets/TagPopover.vala',
  'Widgets/TagPopoverRow.vala',
  'Widgets/TagRow.vala',
  'Widgets/UpdateButton.vala',
  'Widgets/WebLoginPage.vala'
]
